Partial implement of booking functionality

--- a/calendarbooking/CalendarBookingProject/CalendarBookingProject/App/Main/index.html
+++ b/calendarbooking/CalendarBookingProject/CalendarBookingProject/App/Main/index.html
@@ -1,4 +1,4 @@
-﻿<p>Gastrobooking</p>
+﻿
 <div class="row">
-    <div ui-calendar class="span8 calendar" ng-model="vm.eventSources"></div>
+    <div id="calendar" ui-calendar="vm.calendar.calendar" class="span8 calendar" ng-model="vm.events"></div>
 </div>
